--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -9,11 +9,15 @@
 
     <!--Status Fragment-->
     <string name="magisk_version_error">Magisk nu este instalat</string>
-
     <string name="checking_for_updates">Verificare actualizări…</string>
     <string name="magisk_update_available">Magisk v%1$s disponibil!</string>
+    <string name="invalid_update_channel">Canal de actualizare nevalid</string>
     <string name="safetyNet_check_text">Verificare SafetyNet</string>
     <string name="checking_safetyNet_status">Verificarea stării SafetyNet…</string>
+    <string name="safetyNet_check_success">Verificare SafetyNet cu succes</string>
+    <string name="safetyNet_api_error">Eroare API SafetyNet</string>
+    <string name="safetyNet_network_loss">Conexiunea la rețea nu este disponibilă</string>
+    <string name="safetyNet_service_disconnected">Serviciul a fost oprit</string>
 
     <!--Install Fragment-->
     <string name="advanced_settings_title">Setări avansate</string>
@@ -23,6 +27,7 @@
     <string name="install_magisk_title">Ultima versiune: %1$s</string>
     <string name="uninstall">Dezinstalare</string>
     <string name="uninstall_magisk_title">Dezinstalare Magisk</string>
+    <string name="uninstall_magisk_msg">Toate modulele vor fi dezactivate/eliminate. Accesul la Root va fi eliminat și potențial se vor cripta datele dacă nu sunt în prezent criptate</string>
     <string name="update">Actualizare %1$s</string>
   
 
@@ -72,7 +77,6 @@
     <string name="download">Descărcare</string>
     <string name="download_file_error">Eroare la descărcarea fișierului</string>
     <string name="reboot">Repornire</string>
-    <string name="zip_process_msg">Procesare fişierului zip…</string>
     <string name="downloading_toast">Descărcare %1$s</string>
     <string name="magisk_update_title">O nouă actualizare Magisk este disponibilă!</string>
     <string name="settings_reboot_toast">Reporniți pentru a aplica setările</string>
@@ -81,13 +85,34 @@
     <string name="safetyNet_hide_notice">Această aplicație utilizează SafetyNet\nDeja gestionat de MagiskHide în mod implicit</string>
     <string name="process_error">Eroare de proces</string>
     <string name="internal_storage">Zip stocat în:\n[Stocare internă]%1$s</string>
+    <string name="zip_download_title">Descărcare</string>
+    <string name="zip_download_msg">Descărcare fişier zip (%1$d%%)…</string>
     <string name="zip_process_title">Procesare</string>
+    <string name="zip_process_msg">Procesare fişier zip…</string>
     <string name="manager_update_title">O nouă actualizare pentru Magisk Manager este disponibilă!</string>
     <string name="manager_download_install">Apăsați pentru a descărca și instala</string>
+    <string name="dtbo_patched_title">DTBO a fost modificat!</string>
+    <string name="dtbo_patched_reboot">Magisk Manager a modificat dtbo.img, reporniţi</string>
     <string name="magisk_updates">Actualizări Magisk</string>
     <string name="flashing">Flashing</string>
     <string name="hide_manager_toast">Ascundere Magisk Manager…</string>
+    <string name="hide_manager_toast2">Ar putea dura ceva timp…</string>
     <string name="hide_manager_fail_toast">Ascunderea Magisk Manager a eşuat</string>
+    <string name="download_zip_only">Doar descărcare fişier Zip</string>
+    <string name="patch_boot_file">Modificare fişier imagine Boot</string>
+    <string name="direct_install">Instalare directă (Recomandat)</string>
+    <string name="install_second_slot">Instalare în slotul secund (După OTA)</string>
+    <string name="select_method">Selectaţi metoda</string>
+    <string name="no_boot_file_patch_support">Versiunea Magisk nu acceptă modificarea imaginii de Boot</string>
+    <string name="boot_file_patch_msg">Selectaţi formatul .img sau .img.tar pentru imaginea de Boot stoc</string>
+    <string name="complete_uninstall">Dezinstalare totală</string>
+    <string name="restore_stock_boot">Restabilire Boot stoc</string>
+    <string name="restore_done">Restabilire finalizată!</string>
+    <string name="restore_fail">Backup stoc nu există!</string>
+    <string name="uninstall_toast">Dezinstalare Magisk Manager în 5 secunde, ulterior reporniți manual</string>
+    <string name="proprietary_title">Descărcare cod proprietar</string>
+    <string name="proprietary_notice">Magisk Manager este FOSS așa că nu conține codul API SafetyNet de la Google.\n\nPermiteți ca Magisk Manager să descarce o extensie (conține GoogleApiClient) pentru verificările SafetyNet?</string>
+    <string name="su_db_corrupt">Baza de date SU este defectă, va fi creată o bază nouă</string>
 
     <!--Settings Activity -->
     <string name="settings_general_category">General</string>
@@ -98,9 +123,17 @@
     <string name="settings_clear_cache_title">Eliminare cache</string>
     <string name="settings_clear_cache_summary">Ștergeți informațiile memorate în cache, forțează actualizarea aplicației online</string>
     <string name="settings_hide_manager_title">Ascundeţi Magisk Manager</string>
+    <string name="settings_hide_manager_summary">Reîmpachetare Magisk Manager cu nume de pachet aleatoriu</string>
     <string name="language">Limbă</string>
     <string name="system_default">(Implicit)</string>
-
+    <string name="settings_update">Setări actualizare</string>
+    <string name="settings_update_channel_title">Canal de actualizare</string>
+    <string name="settings_update_stable">Stabil</string>
+    <string name="settings_update_beta">Beta</string>
+    <string name="settings_update_custom">Personalizat</string>
+    <string name="settings_update_custom_msg">Introduceți un URL personalizat</string>
+    <string name="settings_boot_format_title">Formatul Boot-ului modificat</string>
+    <string name="settings_boot_format_summary">Selectați formatul fișierului imaginii de Boot modificată.\nAlegeţi .img pentru flash prin modul fastboot/download; alegeţi .img.tar pentru flash prin ODIN.</string>
     <string name="settings_core_only_title">Mod de bază</string>
     <string name="settings_core_only_summary">Se activează numai caracteristicile principale, toate modulele nu vor fi încărcate. MagiskSU, MagiskHide şi systemless hosts vor fi în continuare activate</string>
     <string name="settings_magiskhide_summary">Ascundeţi Magisk de la diferite detectări</string>
